chat/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-3r
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-3r
  template:
    metadata:
      labels:
        app: backend-3r
    spec:
      containers:
      - name: backend-3r
        image: tinnaung/backend-3r-chippichat:latest
        ports:
        - containerPort: 5789
---
apiVersion: v1
kind: Service
metadata:
  name: backend-3r
spec:
  ports:
  - port: 5789
    targetPort: 5789
  selector:
    app: backend-3r
